--- a/5_pandas/5_pandas.ipynb
+++ b/5_pandas/5_pandas.ipynb
@@ -3,17 +3,21 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-05T15:39:57.459666Z",
-     "start_time": "2025-04-05T15:39:57.255752Z"
+     "end_time": "2025-04-05T17:59:36.877002Z",
+     "start_time": "2025-04-05T17:59:36.408948Z"
     }
    },
    "cell_type": "code",
    "source": [
     "import pandas as pd\n",
     "\n",
-    "df = pd.read_csv('./datasets/6_pandas_data.csv')\n",
+    "df = pd.read_csv('../datasets/6_pandas_data.csv')\n",
     "\n",
-    "df.info()"
+    "# Описание данных\n",
+    "print(df.info())\n",
+    "print(df.head())\n",
+    "print(df.describe())\n",
+    "print(df.dtypes)"
    ],
    "id": "f3529a2aa27a152c",
    "outputs": [
@@ -43,312 +47,79 @@
       " 14  name               77257 non-null  object \n",
       " 15  province           77257 non-null  object \n",
       "dtypes: float64(2), object(14)\n",
-      "memory usage: 9.4+ MB\n"
+      "memory usage: 9.4+ MB\n",
+      "None\n",
+      "                     id                   address  \\\n",
+      "0  AVwc__cikufWRAb51QjV         610 Commercial St   \n",
+      "1  AVwc__cikufWRAb51QjV         610 Commercial St   \n",
+      "2  AVwc__dF_7pvs4fz1Ncy      9521 Morton Davis Dr   \n",
+      "3  AVwc__kCByjofQCxkdm-  10550 W I 25 Frontage Rd   \n",
+      "4  AVwc__WtByjofQCxkdkR             8495 W 3rd St   \n",
+      "\n",
+      "                                          categories         city  \\\n",
+      "0  Restaurant Delivery Service,Restaurants,Pizza,...     Atchison   \n",
+      "1  Restaurant Delivery Service,Restaurants,Pizza,...     Atchison   \n",
+      "2       Golf Course, American Restaurant, and Resort    Patterson   \n",
+      "3                               Fast Food Restaurant     Longmont   \n",
+      "4  Mexican Restaurant Mid-City West,Mexican Resta...  Los Angeles   \n",
+      "\n",
+      "                      cuisines             dateAdded           dateUpdated  \\\n",
+      "0  Restaurant Delivery Service  2016-03-02T11:49:34Z  2017-02-01T18:04:44Z   \n",
+      "1  Restaurant Delivery Service  2016-03-02T11:49:34Z  2017-02-01T18:04:44Z   \n",
+      "2                          NaN  2016-10-14T01:58:25Z  2016-10-14T01:58:25Z   \n",
+      "3                          NaN  2016-09-09T17:30:34Z  2016-10-04T05:15:17Z   \n",
+      "4                      Mexican  2016-05-19T11:50:25Z  2016-09-11T00:06:37Z   \n",
+      "\n",
+      "    latitude   longitude menus.category menus.currency        menus.dateSeen  \\\n",
+      "0  39.561570  -95.121020            NaN            NaN  2017-02-01T18:04:44Z   \n",
+      "1  39.561570  -95.121020            NaN            NaN  2016-03-02T11:49:34Z   \n",
+      "2  37.401855 -121.266703            NaN            NaN  2016-10-14T01:58:25Z   \n",
+      "3        NaN         NaN            NaN            NaN  2016-09-09T17:30:34Z   \n",
+      "4  34.080724 -118.389578            NaN            NaN  2016-05-19T11:50:25Z   \n",
+      "\n",
+      "                                   menus.description         menus.name  \\\n",
+      "0                                                NaN               Taco   \n",
+      "1  Beef, onion, cheddar cheese, lettuce,  refried...               Taco   \n",
+      "2  Beef barbacoa or chicken, spanish rice, pico d...   Smotherd Burrito   \n",
+      "3                                                NaN    Sausage Burrito   \n",
+      "4  Wahoo, avocado, cabbage, pico de gallo  and av...  Wahoo Tacogrilled   \n",
+      "\n",
+      "                                name      province  \n",
+      "0                    Gambino's Pizza            KS  \n",
+      "1                    Gambino's Pizza            KS  \n",
+      "2  Diablo Grande Golf & Country Club       Grayson  \n",
+      "3                         Mcdonald's         Niwot  \n",
+      "4           Baja Fresh Mexican Grill  Bicentennial  \n",
+      "           latitude     longitude\n",
+      "count  55636.000000  55636.000000\n",
+      "mean      36.694846    -98.713309\n",
+      "std        4.835124     18.245857\n",
+      "min      -31.986438   -159.492690\n",
+      "25%       33.668355   -117.647150\n",
+      "50%       36.047195    -96.682320\n",
+      "75%       40.588380    -82.679930\n",
+      "max       61.219460    115.903696\n",
+      "id                    object\n",
+      "address               object\n",
+      "categories            object\n",
+      "city                  object\n",
+      "cuisines              object\n",
+      "dateAdded             object\n",
+      "dateUpdated           object\n",
+      "latitude             float64\n",
+      "longitude            float64\n",
+      "menus.category        object\n",
+      "menus.currency        object\n",
+      "menus.dateSeen        object\n",
+      "menus.description     object\n",
+      "menus.name            object\n",
+      "name                  object\n",
+      "province              object\n",
+      "dtype: object\n"
      ]
     }
    ],
-   "execution_count": 4
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-04-05T15:39:58.637426Z",
-     "start_time": "2025-04-05T15:39:58.628999Z"
-    }
-   },
-   "cell_type": "code",
-   "source": "df.head()",
-   "id": "78658b970cf36538",
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "                     id                   address  \\\n",
-       "0  AVwc__cikufWRAb51QjV         610 Commercial St   \n",
-       "1  AVwc__cikufWRAb51QjV         610 Commercial St   \n",
-       "2  AVwc__dF_7pvs4fz1Ncy      9521 Morton Davis Dr   \n",
-       "3  AVwc__kCByjofQCxkdm-  10550 W I 25 Frontage Rd   \n",
-       "4  AVwc__WtByjofQCxkdkR             8495 W 3rd St   \n",
-       "\n",
-       "                                          categories         city  \\\n",
-       "0  Restaurant Delivery Service,Restaurants,Pizza,...     Atchison   \n",
-       "1  Restaurant Delivery Service,Restaurants,Pizza,...     Atchison   \n",
-       "2       Golf Course, American Restaurant, and Resort    Patterson   \n",
-       "3                               Fast Food Restaurant     Longmont   \n",
-       "4  Mexican Restaurant Mid-City West,Mexican Resta...  Los Angeles   \n",
-       "\n",
-       "                      cuisines             dateAdded           dateUpdated  \\\n",
-       "0  Restaurant Delivery Service  2016-03-02T11:49:34Z  2017-02-01T18:04:44Z   \n",
-       "1  Restaurant Delivery Service  2016-03-02T11:49:34Z  2017-02-01T18:04:44Z   \n",
-       "2                          NaN  2016-10-14T01:58:25Z  2016-10-14T01:58:25Z   \n",
-       "3                          NaN  2016-09-09T17:30:34Z  2016-10-04T05:15:17Z   \n",
-       "4                      Mexican  2016-05-19T11:50:25Z  2016-09-11T00:06:37Z   \n",
-       "\n",
-       "    latitude   longitude menus.category menus.currency        menus.dateSeen  \\\n",
-       "0  39.561570  -95.121020            NaN            NaN  2017-02-01T18:04:44Z   \n",
-       "1  39.561570  -95.121020            NaN            NaN  2016-03-02T11:49:34Z   \n",
-       "2  37.401855 -121.266703            NaN            NaN  2016-10-14T01:58:25Z   \n",
-       "3        NaN         NaN            NaN            NaN  2016-09-09T17:30:34Z   \n",
-       "4  34.080724 -118.389578            NaN            NaN  2016-05-19T11:50:25Z   \n",
-       "\n",
-       "                                   menus.description         menus.name  \\\n",
-       "0                                                NaN               Taco   \n",
-       "1  Beef, onion, cheddar cheese, lettuce,  refried...               Taco   \n",
-       "2  Beef barbacoa or chicken, spanish rice, pico d...   Smotherd Burrito   \n",
-       "3                                                NaN    Sausage Burrito   \n",
-       "4  Wahoo, avocado, cabbage, pico de gallo  and av...  Wahoo Tacogrilled   \n",
-       "\n",
-       "                                name      province  \n",
-       "0                    Gambino's Pizza            KS  \n",
-       "1                    Gambino's Pizza            KS  \n",
-       "2  Diablo Grande Golf & Country Club       Grayson  \n",
-       "3                         Mcdonald's         Niwot  \n",
-       "4           Baja Fresh Mexican Grill  Bicentennial  "
-      ],
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>id</th>\n",
-       "      <th>address</th>\n",
-       "      <th>categories</th>\n",
-       "      <th>city</th>\n",
-       "      <th>cuisines</th>\n",
-       "      <th>dateAdded</th>\n",
-       "      <th>dateUpdated</th>\n",
-       "      <th>latitude</th>\n",
-       "      <th>longitude</th>\n",
-       "      <th>menus.category</th>\n",
-       "      <th>menus.currency</th>\n",
-       "      <th>menus.dateSeen</th>\n",
-       "      <th>menus.description</th>\n",
-       "      <th>menus.name</th>\n",
-       "      <th>name</th>\n",
-       "      <th>province</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>AVwc__cikufWRAb51QjV</td>\n",
-       "      <td>610 Commercial St</td>\n",
-       "      <td>Restaurant Delivery Service,Restaurants,Pizza,...</td>\n",
-       "      <td>Atchison</td>\n",
-       "      <td>Restaurant Delivery Service</td>\n",
-       "      <td>2016-03-02T11:49:34Z</td>\n",
-       "      <td>2017-02-01T18:04:44Z</td>\n",
-       "      <td>39.561570</td>\n",
-       "      <td>-95.121020</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2017-02-01T18:04:44Z</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Taco</td>\n",
-       "      <td>Gambino's Pizza</td>\n",
-       "      <td>KS</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>AVwc__cikufWRAb51QjV</td>\n",
-       "      <td>610 Commercial St</td>\n",
-       "      <td>Restaurant Delivery Service,Restaurants,Pizza,...</td>\n",
-       "      <td>Atchison</td>\n",
-       "      <td>Restaurant Delivery Service</td>\n",
-       "      <td>2016-03-02T11:49:34Z</td>\n",
-       "      <td>2017-02-01T18:04:44Z</td>\n",
-       "      <td>39.561570</td>\n",
-       "      <td>-95.121020</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2016-03-02T11:49:34Z</td>\n",
-       "      <td>Beef, onion, cheddar cheese, lettuce,  refried...</td>\n",
-       "      <td>Taco</td>\n",
-       "      <td>Gambino's Pizza</td>\n",
-       "      <td>KS</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>AVwc__dF_7pvs4fz1Ncy</td>\n",
-       "      <td>9521 Morton Davis Dr</td>\n",
-       "      <td>Golf Course, American Restaurant, and Resort</td>\n",
-       "      <td>Patterson</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2016-10-14T01:58:25Z</td>\n",
-       "      <td>2016-10-14T01:58:25Z</td>\n",
-       "      <td>37.401855</td>\n",
-       "      <td>-121.266703</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2016-10-14T01:58:25Z</td>\n",
-       "      <td>Beef barbacoa or chicken, spanish rice, pico d...</td>\n",
-       "      <td>Smotherd Burrito</td>\n",
-       "      <td>Diablo Grande Golf &amp; Country Club</td>\n",
-       "      <td>Grayson</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>AVwc__kCByjofQCxkdm-</td>\n",
-       "      <td>10550 W I 25 Frontage Rd</td>\n",
-       "      <td>Fast Food Restaurant</td>\n",
-       "      <td>Longmont</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2016-09-09T17:30:34Z</td>\n",
-       "      <td>2016-10-04T05:15:17Z</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2016-09-09T17:30:34Z</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Sausage Burrito</td>\n",
-       "      <td>Mcdonald's</td>\n",
-       "      <td>Niwot</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>AVwc__WtByjofQCxkdkR</td>\n",
-       "      <td>8495 W 3rd St</td>\n",
-       "      <td>Mexican Restaurant Mid-City West,Mexican Resta...</td>\n",
-       "      <td>Los Angeles</td>\n",
-       "      <td>Mexican</td>\n",
-       "      <td>2016-05-19T11:50:25Z</td>\n",
-       "      <td>2016-09-11T00:06:37Z</td>\n",
-       "      <td>34.080724</td>\n",
-       "      <td>-118.389578</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2016-05-19T11:50:25Z</td>\n",
-       "      <td>Wahoo, avocado, cabbage, pico de gallo  and av...</td>\n",
-       "      <td>Wahoo Tacogrilled</td>\n",
-       "      <td>Baja Fresh Mexican Grill</td>\n",
-       "      <td>Bicentennial</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "execution_count": 5
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-04-05T15:39:59.799983Z",
-     "start_time": "2025-04-05T15:39:59.787947Z"
-    }
-   },
-   "cell_type": "code",
-   "source": "df.describe()",
-   "id": "fc083e240792fb0b",
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "           latitude     longitude\n",
-       "count  55636.000000  55636.000000\n",
-       "mean      36.694846    -98.713309\n",
-       "std        4.835124     18.245857\n",
-       "min      -31.986438   -159.492690\n",
-       "25%       33.668355   -117.647150\n",
-       "50%       36.047195    -96.682320\n",
-       "75%       40.588380    -82.679930\n",
-       "max       61.219460    115.903696"
-      ],
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>latitude</th>\n",
-       "      <th>longitude</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>count</th>\n",
-       "      <td>55636.000000</td>\n",
-       "      <td>55636.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>mean</th>\n",
-       "      <td>36.694846</td>\n",
-       "      <td>-98.713309</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>std</th>\n",
-       "      <td>4.835124</td>\n",
-       "      <td>18.245857</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>min</th>\n",
-       "      <td>-31.986438</td>\n",
-       "      <td>-159.492690</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25%</th>\n",
-       "      <td>33.668355</td>\n",
-       "      <td>-117.647150</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>50%</th>\n",
-       "      <td>36.047195</td>\n",
-       "      <td>-96.682320</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>75%</th>\n",
-       "      <td>40.588380</td>\n",
-       "      <td>-82.679930</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>max</th>\n",
-       "      <td>61.219460</td>\n",
-       "      <td>115.903696</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "execution_count": 6
+   "execution_count": 1
   },
   {
    "metadata": {},
@@ -374,6 +145,64 @@
     "- `province` - область (штат), где находится заведение."
    ],
    "id": "56f7408f3b6b7f4"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-04-05T18:10:32.735142Z",
+     "start_time": "2025-04-05T18:10:32.689652Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# Посмотрим сколько пропущенных данных\n",
+    "# print(df.isna().sum())\n",
+    "\n",
+    "#  Удалим пропуски\n",
+    "print(df.dropna().info())\n",
+    "# print(df.info())\n",
+    "# df = df.dropna()\n",
+    "# print(df.info())\n",
+    "\n",
+    "print(f\"Indexes in California {df.index[df[\"city\"] == \"California\"].tolist()}\")\n",
+    "print(f\"Indexes in California and name = Taco Bell {df.index[(df['categories'] == \"Taco Bell\") & (df[\"city\"] == \"California\")].tolist()}\")"
+   ],
+   "id": "592b689292775405",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Index: 1925 entries, 72 to 77014\n",
+      "Data columns (total 16 columns):\n",
+      " #   Column             Non-Null Count  Dtype  \n",
+      "---  ------             --------------  -----  \n",
+      " 0   id                 1925 non-null   object \n",
+      " 1   address            1925 non-null   object \n",
+      " 2   categories         1925 non-null   object \n",
+      " 3   city               1925 non-null   object \n",
+      " 4   cuisines           1925 non-null   object \n",
+      " 5   dateAdded          1925 non-null   object \n",
+      " 6   dateUpdated        1925 non-null   object \n",
+      " 7   latitude           1925 non-null   float64\n",
+      " 8   longitude          1925 non-null   float64\n",
+      " 9   menus.category     1925 non-null   object \n",
+      " 10  menus.currency     1925 non-null   object \n",
+      " 11  menus.dateSeen     1925 non-null   object \n",
+      " 12  menus.description  1925 non-null   object \n",
+      " 13  menus.name         1925 non-null   object \n",
+      " 14  name               1925 non-null   object \n",
+      " 15  province           1925 non-null   object \n",
+      "dtypes: float64(2), object(14)\n",
+      "memory usage: 255.7+ KB\n",
+      "None\n",
+      "Indexes in California [40483, 52930, 52931, 52932, 52933, 52934, 52935, 52936, 52937, 52938, 52939, 65070]\n",
+      "Indexes in California and name = Taco Bell []\n"
+     ]
+    }
+   ],
+   "execution_count": 9
   }
  ],
  "metadata": {
