--- a/python/5_pandas/5_pandas.ipynb
+++ b/python/5_pandas/5_pandas.ipynb
@@ -149,8 +149,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-05T18:10:32.735142Z",
-     "start_time": "2025-04-05T18:10:32.689652Z"
+     "end_time": "2025-04-05T20:15:05.963475Z",
+     "start_time": "2025-04-05T20:15:05.905321Z"
     }
    },
    "cell_type": "code",
@@ -198,11 +198,358 @@
       "memory usage: 255.7+ KB\n",
       "None\n",
       "Indexes in California [40483, 52930, 52931, 52932, 52933, 52934, 52935, 52936, 52937, 52938, 52939, 65070]\n",
-      "Indexes in California and name = Taco Bell []\n"
+      "Indexes in California and name = Taco Bell []\n",
+      "                         id          address  \\\n",
+      "131    AVwc_9yCByjofQCxkdRX  322 S. Broadway   \n",
+      "132    AVwc_9yCByjofQCxkdRX  322 S. Broadway   \n",
+      "133    AVwc_9yCByjofQCxkdRX  322 S. Broadway   \n",
+      "135    AVwc_9yCByjofQCxkdRX  322 S. Broadway   \n",
+      "136    AVwc_9yCByjofQCxkdRX  322 S. Broadway   \n",
+      "...                     ...              ...   \n",
+      "76904  AVweZN9nByjofQCxxz4o    754 Ninth Ave   \n",
+      "76905  AVweZN9nByjofQCxxz4o    754 Ninth Ave   \n",
+      "76906  AVweZN9nByjofQCxxz4o    754 Ninth Ave   \n",
+      "76907  AVweZN9nByjofQCxxz4o    754 Ninth Ave   \n",
+      "76908  AVweZN9nByjofQCxxz4o    754 Ninth Ave   \n",
+      "\n",
+      "                                              categories      city  \\\n",
+      "131    Fast Food,Restaurants,Mexican,Breakfast,Vegeta...     Salem   \n",
+      "132    Fast Food,Restaurants,Mexican,Breakfast,Vegeta...     Salem   \n",
+      "133    Fast Food,Restaurants,Mexican,Breakfast,Vegeta...     Salem   \n",
+      "135    Fast Food,Restaurants,Mexican,Breakfast,Vegeta...     Salem   \n",
+      "136    Fast Food,Restaurants,Mexican,Breakfast,Vegeta...     Salem   \n",
+      "...                                                  ...       ...   \n",
+      "76904                                         Restaurant  New York   \n",
+      "76905                                         Restaurant  New York   \n",
+      "76906                                         Restaurant  New York   \n",
+      "76907                                         Restaurant  New York   \n",
+      "76908                                         Restaurant  New York   \n",
+      "\n",
+      "                                     cuisines             dateAdded  \\\n",
+      "131                                   Mexican  2016-03-28T06:01:51Z   \n",
+      "132                                   Mexican  2016-03-28T06:01:51Z   \n",
+      "133                                   Mexican  2016-03-28T06:01:51Z   \n",
+      "135                                   Mexican  2016-03-28T06:01:51Z   \n",
+      "136                                   Mexican  2016-03-28T06:01:51Z   \n",
+      "...                                       ...                   ...   \n",
+      "76904  Mexican, American, Traditional Mexican  2015-10-19T20:44:15Z   \n",
+      "76905  Mexican, American, Traditional Mexican  2015-10-19T20:44:15Z   \n",
+      "76906  Mexican, American, Traditional Mexican  2015-10-19T20:44:15Z   \n",
+      "76907  Mexican, American, Traditional Mexican  2015-10-19T20:44:15Z   \n",
+      "76908  Mexican, American, Traditional Mexican  2015-10-19T20:44:15Z   \n",
+      "\n",
+      "                dateUpdated   latitude  longitude menus.category  \\\n",
+      "131    2017-06-27T10:01:48Z  42.755023 -71.209440            NaN   \n",
+      "132    2017-06-27T10:01:48Z  42.755023 -71.209440            NaN   \n",
+      "133    2017-06-27T10:01:48Z  42.755023 -71.209440            NaN   \n",
+      "135    2017-06-27T10:01:48Z  42.755023 -71.209440            NaN   \n",
+      "136    2017-06-27T10:01:48Z  42.755023 -71.209440            NaN   \n",
+      "...                     ...        ...        ...            ...   \n",
+      "76904  2016-08-22T11:24:07Z  40.763858 -73.988327          Tacos   \n",
+      "76905  2016-08-22T11:24:07Z  40.763858 -73.988327   Huevos, Etc.   \n",
+      "76906  2016-08-22T11:24:07Z  40.763858 -73.988327        Botanas   \n",
+      "76907  2016-08-22T11:24:07Z  40.763858 -73.988327        Botanas   \n",
+      "76908  2016-08-22T11:24:07Z  40.763858 -73.988327           Main   \n",
+      "\n",
+      "      menus.currency                             menus.dateSeen  \\\n",
+      "131              NaN  2016-03-28T06:01:51Z,2016-06-06T16:15:44Z   \n",
+      "132              NaN  2016-03-28T06:01:51Z,2016-06-06T16:15:44Z   \n",
+      "133              NaN  2016-03-28T06:01:51Z,2016-06-06T16:15:44Z   \n",
+      "135              NaN  2016-03-28T06:01:51Z,2016-06-06T16:15:44Z   \n",
+      "136              NaN  2016-03-28T06:01:51Z,2016-06-06T16:15:44Z   \n",
+      "...              ...                                        ...   \n",
+      "76904            USD                       2016-08-21T00:00:00Z   \n",
+      "76905            USD                       2016-08-07T00:00:00Z   \n",
+      "76906            USD                       2016-08-07T00:00:00Z   \n",
+      "76907            USD                       2016-08-07T00:00:00Z   \n",
+      "76908            NaN                       2016-08-21T00:00:00Z   \n",
+      "\n",
+      "                 menus.description                      menus.name  \\\n",
+      "131                            NaN                 Volcano Burrito   \n",
+      "132                            NaN                    Taco 12 Pack   \n",
+      "133                            NaN         Grilled Steak Soft Taco   \n",
+      "135                            NaN  Fresco Grilled Steak Soft Taco   \n",
+      "136                            NaN             Fresco Crunchy Taco   \n",
+      "...                            ...                             ...   \n",
+      "76904                          NaN                   Trio of Tacos   \n",
+      "76905                          NaN                  Brunch Burrito   \n",
+      "76906                          NaN    Grilled Chicken Mini Burrito   \n",
+      "76907  with pumpkin seed guacamole  Grilled Vegetable Mini Burrito   \n",
+      "76908                          NaN                        Burritos   \n",
+      "\n",
+      "                 name province  \n",
+      "131         Taco Bell       NH  \n",
+      "132         Taco Bell       NH  \n",
+      "133         Taco Bell       NH  \n",
+      "135         Taco Bell       NH  \n",
+      "136         Taco Bell       NH  \n",
+      "...               ...      ...  \n",
+      "76904  Hell's Kitchen      Nyc  \n",
+      "76905  Hell's Kitchen      Nyc  \n",
+      "76906  Hell's Kitchen      Nyc  \n",
+      "76907  Hell's Kitchen      Nyc  \n",
+      "76908  Hell's Kitchen      Nyc  \n",
+      "\n",
+      "[3756 rows x 16 columns]\n"
      ]
     }
    ],
-   "execution_count": 9
+   "execution_count": 11
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "print(df[((df['name'] == 'Taco Bell') | (df['city'] == 'New York')) & ~((df['menus.name'] == 'Volcano Taco') | (df['menus.name'] == 'Fresco Soft Taco'))])",
+   "id": "db4234ba5dc5f9c6"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-04-05T20:18:18.340986Z",
+     "start_time": "2025-04-05T20:18:18.322242Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "print(df[~(df['menus.currency'].isna())])",
+   "id": "f77ddb831e95fe3",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                         id           address  \\\n",
+      "15     AVwc_1y6kufWRAb51O6w   906 Park Ave SW   \n",
+      "16     AVwc_1y6kufWRAb51O6w   906 Park Ave SW   \n",
+      "17     AVwc_1y6kufWRAb51O6w   906 Park Ave SW   \n",
+      "18     AVwc_2OQ_7pvs4fz1L5H  100 W Higgins Rd   \n",
+      "19     AVwc_2OQ_7pvs4fz1L5H  100 W Higgins Rd   \n",
+      "...                     ...               ...   \n",
+      "77255  AVzRLlQNLD2H7whiWdH_     3919 24th St.   \n",
+      "77256  AVzRLlQNLD2H7whiWdH_     3919 24th St.   \n",
+      "77257  AVzRLlQNLD2H7whiWdH_     3919 24th St.   \n",
+      "77258  AVzRLlQNLD2H7whiWdH_     3919 24th St.   \n",
+      "77259  AVzRLlQNLD2H7whiWdH_     3919 24th St.   \n",
+      "\n",
+      "                                 categories           city  \\\n",
+      "15     Coffee Shop,Restaurants,Coffeehouses    Albuquerque   \n",
+      "16     Coffee Shop,Restaurants,Coffeehouses    Albuquerque   \n",
+      "17     Coffee Shop,Restaurants,Coffeehouses    Albuquerque   \n",
+      "18                               Restaurant     Barrington   \n",
+      "19                               Restaurant     Barrington   \n",
+      "...                                     ...            ...   \n",
+      "77255                            Restaurant  San Francisco   \n",
+      "77256                            Restaurant  San Francisco   \n",
+      "77257                            Restaurant  San Francisco   \n",
+      "77258                            Restaurant  San Francisco   \n",
+      "77259                            Restaurant  San Francisco   \n",
+      "\n",
+      "                      cuisines             dateAdded           dateUpdated  \\\n",
+      "15                Coffee Shops  2016-06-05T20:15:56Z  2017-07-06T13:28:29Z   \n",
+      "16                Coffee Shops  2016-06-05T20:15:56Z  2017-07-06T13:28:29Z   \n",
+      "17                Coffee Shops  2016-06-05T20:15:56Z  2017-07-06T13:28:29Z   \n",
+      "18     Mexican, Latin American  2016-07-26T17:39:41Z  2016-08-26T05:25:56Z   \n",
+      "19     Mexican, Latin American  2016-07-26T17:39:41Z  2016-08-26T05:25:56Z   \n",
+      "...                        ...                   ...                   ...   \n",
+      "77255                  Mexican  2017-06-22T19:01:33Z  2017-06-22T19:01:33Z   \n",
+      "77256                  Mexican  2017-06-22T19:01:33Z  2017-06-22T19:01:33Z   \n",
+      "77257                  Mexican  2017-06-22T19:01:33Z  2017-06-22T19:01:33Z   \n",
+      "77258                  Mexican  2017-06-22T19:01:33Z  2017-06-22T19:01:33Z   \n",
+      "77259                  Mexican  2017-06-22T19:01:33Z  2017-06-22T19:01:33Z   \n",
+      "\n",
+      "        latitude   longitude menus.category menus.currency  \\\n",
+      "15     35.085320 -106.657616            NaN            USD   \n",
+      "16     35.085320 -106.657616            NaN            USD   \n",
+      "17     35.085320 -106.657616            NaN            USD   \n",
+      "18     42.074974  -88.189151            NaN            USD   \n",
+      "19     42.074974  -88.189151            NaN            USD   \n",
+      "...          ...         ...            ...            ...   \n",
+      "77255  37.751392 -122.430180            NaN            USD   \n",
+      "77256  37.751392 -122.430180            NaN            USD   \n",
+      "77257  37.751392 -122.430180            NaN            USD   \n",
+      "77258  37.751392 -122.430180            NaN            USD   \n",
+      "77259  37.751392 -122.430180            NaN            USD   \n",
+      "\n",
+      "                                  menus.dateSeen  \\\n",
+      "15     2016-06-05T20:15:56Z,2016-10-20T07:09:38Z   \n",
+      "16     2016-06-05T20:15:56Z,2016-10-20T07:09:38Z   \n",
+      "17     2016-06-05T20:15:56Z,2016-10-20T07:09:38Z   \n",
+      "18                          2016-08-22T00:00:00Z   \n",
+      "19                          2016-08-22T00:00:00Z   \n",
+      "...                                          ...   \n",
+      "77255                   2017-06-22T16:40:06.448Z   \n",
+      "77256                   2017-06-22T16:40:06.448Z   \n",
+      "77257                   2017-06-22T16:40:06.448Z   \n",
+      "77258                   2017-06-22T16:40:06.448Z   \n",
+      "77259                   2017-06-22T16:40:06.448Z   \n",
+      "\n",
+      "                                       menus.description  \\\n",
+      "15     Potatoes, onion, peppers, mushroom, avocado, b...   \n",
+      "16     Grilled tofu, potatoes and your choice of chil...   \n",
+      "17                                                   NaN   \n",
+      "18                                                   NaN   \n",
+      "19     lettuce, chihuahua cheese, black beans, mexica...   \n",
+      "...                                                  ...   \n",
+      "77255  meat, rice, beans, guacamole, sour cream, chee...   \n",
+      "77256                 melted cheese, rice, beans & salsa   \n",
+      "77257                                       meat & salsa   \n",
+      "77258                          meat, rice, beans & salsa   \n",
+      "77259  stuffed with rice, beans, meat, topped with en...   \n",
+      "\n",
+      "                     menus.name                                     name  \\\n",
+      "15         Mondo Veggie Burrito                               Java Joe's   \n",
+      "16                 Tofu Burrito                               Java Joe's   \n",
+      "17           Black Bean Burrito                               Java Joe's   \n",
+      "18             Burrito De Rajas  Mago Grill & Cantina - South Barrington   \n",
+      "19                         Taco  Mago Grill & Cantina - South Barrington   \n",
+      "...                         ...                                      ...   \n",
+      "77255             Super Burrito                       La Casona Taqueria   \n",
+      "77256  Steamed Broccoli Burrito                       La Casona Taqueria   \n",
+      "77257              Regular Taco                       La Casona Taqueria   \n",
+      "77258           Regular Burrito                       La Casona Taqueria   \n",
+      "77259            Azteca Burrito                       La Casona Taqueria   \n",
+      "\n",
+      "            province  \n",
+      "15                NM  \n",
+      "16                NM  \n",
+      "17                NM  \n",
+      "18     Fox Rv Vly Gn  \n",
+      "19     Fox Rv Vly Gn  \n",
+      "...              ...  \n",
+      "77255     California  \n",
+      "77256     California  \n",
+      "77257     California  \n",
+      "77258     California  \n",
+      "77259     California  \n",
+      "\n",
+      "[40511 rows x 16 columns]\n"
+     ]
+    }
+   ],
+   "execution_count": 12
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-04-05T20:33:36.165413Z",
+     "start_time": "2025-04-05T20:33:36.151757Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# print(df[['categories', 'city']])\n",
+    "\n",
+    "print(f\"df['categories']: {df['categories'].info()}\\n\")\n",
+    "print(f\"df[['categories']]: {df[['categories']].info()}\")"
+   ],
+   "id": "31448a0a3fd2f942",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.series.Series'>\n",
+      "RangeIndex: 77260 entries, 0 to 77259\n",
+      "Series name: categories\n",
+      "Non-Null Count  Dtype \n",
+      "--------------  ----- \n",
+      "77260 non-null  object\n",
+      "dtypes: object(1)\n",
+      "memory usage: 603.7+ KB\n",
+      "df['categories']: None\n",
+      "\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 77260 entries, 0 to 77259\n",
+      "Data columns (total 1 columns):\n",
+      " #   Column      Non-Null Count  Dtype \n",
+      "---  ------      --------------  ----- \n",
+      " 0   categories  77260 non-null  object\n",
+      "dtypes: object(1)\n",
+      "memory usage: 603.7+ KB\n",
+      "df[['categories']]: None\n"
+     ]
+    }
+   ],
+   "execution_count": 30
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-04-06T13:21:26.364849Z",
+     "start_time": "2025-04-06T13:21:26.355204Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "print(df['city'].value_counts())",
+   "id": "f35c36c1272e7d8e",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "city\n",
+      "San Diego            1924\n",
+      "Los Angeles          1603\n",
+      "Chicago              1186\n",
+      "San Francisco        1120\n",
+      "New York             1085\n",
+      "                     ... \n",
+      "Corfu                   1\n",
+      "Sharon Hill             1\n",
+      "Lawrence Township       1\n",
+      "Selinsgrove             1\n",
+      "Santa Clarita           1\n",
+      "Name: count, Length: 3601, dtype: int64\n"
+     ]
+    }
+   ],
+   "execution_count": 42
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-04-06T13:44:38.519928Z",
+     "start_time": "2025-04-06T13:44:38.508843Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# result = df[df['name'] == 'Taco Bell'].groupby('city').size().nlargest(5)\n",
+    "result = (\n",
+    "    df[df['name'] == 'Taco Bell']\n",
+    "    .groupby('city')['name']\n",
+    "    .count()\n",
+    "    .sort_values(ascending=False)\n",
+    "    .head()\n",
+    ")\n",
+    "print(result)"
+   ],
+   "id": "ee072c80e45bfb58",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "city\n",
+      "Indianapolis    84\n",
+      "Columbus        63\n",
+      "Charleston      63\n",
+      "Tampa           62\n",
+      "Fresno          42\n",
+      "Name: name, dtype: int64\n"
+     ]
+    }
+   ],
+   "execution_count": 64
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "770a4b068a38ded1"
   }
  ],
  "metadata": {
