--- a/python/6_postgreSQL/6_postgreSQL.ipynb
+++ b/python/6_postgreSQL/6_postgreSQL.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-04-09T08:12:30.378592Z",
-     "start_time": "2025-04-09T08:12:29.676703Z"
+     "end_time": "2025-04-09T15:57:44.833815Z",
+     "start_time": "2025-04-09T15:57:27.963675Z"
     }
    },
    "source": [
@@ -45,8 +45,27 @@
     "# cursor.execute(\n",
     "#     'SELECT topic, COUNT(id) AS post_count FROM post GROUP BY topic ORDER BY post_count DESC'\n",
     "# )\n",
+    "# cursor.execute(\n",
+    "#     'SELECT * FROM \"user\" WHERE city = \\'Voronezh\\' ORDER BY age DESC, exp_group ASC'\n",
+    "# )\n",
+    "# cursor.execute(\n",
+    "#     'SELECT fa.post_id, fa.time, u.age, u.os FROM feed_action fa JOIN \"user\" u ON fa.user_id = u.id WHERE u.city = \\'Omsk\\' AND fa.action = \\'like\\' ORDER BY time DESC LIMIT 100'\n",
+    "# )\n",
+    "# cursor.execute(\n",
+    "#     'SELECT u.city, COUNT(*) AS views '\n",
+    "#     'FROM feed_action fa '\n",
+    "#     'JOIN \"user\" u ON fa.user_id = u.id '\n",
+    "#     'JOIN post p ON fa.post_id = p.id '\n",
+    "#     'WHERE p.topic = \\'covid\\' AND fa.action = \\'view\\' AND u.age = 36 AND DATE(fa.time) = \\'2021-12-01\\''\n",
+    "#     'GROUP BY u.city '\n",
+    "#     'ORDER BY views ASC LIMIT 1'\n",
+    "# )\n",
     "cursor.execute(\n",
-    "    'SELECT * FROM \"user\" WHERE city = \\'Voronezh\\' ORDER BY age DESC, exp_group ASC'\n",
+    "    'SELECT post_id, COUNT(*) AS likes_count, COUNT(DISTINCT user_id) AS unique_users, MAX(time) AS last_like_time '\n",
+    "    'FROM feed_action '\n",
+    "    'WHERE action = \\'like\\' '\n",
+    "    'GROUP BY post_id '\n",
+    "    'ORDER BY likes_count DESC'\n",
     ")\n",
     "df = pd.DataFrame(\n",
     "    cursor.fetchall(),\n",
@@ -64,24 +83,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "          id  gender  age country      city  exp_group       os   source\n",
-      "0      89990       0   71  Russia  Voronezh          0  Android      ads\n",
-      "1       2441       1   71  Russia  Voronezh          3  Android      ads\n",
-      "2      14184       1   66  Russia  Voronezh          3  Android      ads\n",
-      "3      35093       0   65  Russia  Voronezh          0  Android      ads\n",
-      "4      77284       0   64  Russia  Voronezh          4  Android      ads\n",
-      "...      ...     ...  ...     ...       ...        ...      ...      ...\n",
-      "1369  151841       1   14  Russia  Voronezh          4  Android  organic\n",
-      "1370  116446       0   14  Russia  Voronezh          4      iOS  organic\n",
-      "1371   18278       0   14  Russia  Voronezh          4  Android      ads\n",
-      "1372  110611       1   14  Russia  Voronezh          4  Android  organic\n",
-      "1373   29604       0   14  Russia  Voronezh          4  Android      ads\n",
+      "      post_id  likes_count  unique_users      last_like_time\n",
+      "0        4866        31714         31714 2022-01-01 13:57:43\n",
+      "1        5127        29637         29637 2022-01-05 13:52:17\n",
+      "2        6448        27939         27939 2022-01-22 05:50:39\n",
+      "3        6498        27729         27729 2022-01-22 21:45:11\n",
+      "4        6513        27686         27686 2022-01-22 19:59:52\n",
+      "...       ...          ...           ...                 ...\n",
+      "6887      872            1             1 2021-10-30 23:16:13\n",
+      "6888     4932            1             1 2021-12-26 01:56:50\n",
+      "6889      267            1             1 2021-10-22 20:58:28\n",
+      "6890      905            1             1 2021-10-31 19:00:25\n",
+      "6891      474            1             1 2021-10-25 19:31:34\n",
       "\n",
-      "[1374 rows x 8 columns]\n"
+      "[6892 rows x 4 columns]\n"
      ]
     }
    ],
-   "execution_count": 28
+   "execution_count": 8
   }
  ],
  "metadata": {
